--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="custom.css">
     <title>ToDo</title>
 </head>
+
 <body>
 
-<!-- pratik -->
-<!-- <div class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <!-- pratik -->
+    <!-- <div class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 <img id="img1" src="coder-logo.png" alt="coder-logo" draggable="true" ondragstart="drag(event)"> -->
-<!-- pratik -->
+    <!-- pratik -->
 
-<!-- pratik2 -->
-<!-- <img id="img" src="coder-logo.png" alt="coder-logo">
+    <!-- pratik2 -->
+    <!-- <img id="img" src="coder-logo.png" alt="coder-logo">
 <div>
 <button onclick="eventListenerBagla()">Göster</button>
 <button onclick="eventListenerGizle()">Gizle</button>
@@ -25,7 +28,7 @@
 
 <script>
     function eventListenerBagla() {
-        document.getElementById('img').addEventListener('mouseover', show())
+        document.getElementById('img').addEventListener('mouseover', show)
     }
 function
 eventListenerGizle(){
@@ -38,54 +41,162 @@ function show(){
 }
 
 </script> -->
-<!-- pratik2 -->
+    <!-- pratik2 -->
 
 
-<!-- ödev TO-DO -->
+    <!-- ödev TO-DO -->
 
-<div class=" header">
-    <h1>To-Do Uygulaması</h1>
-</div>
-
-<div class="container firsinput">
-    <form>
-<div class="input-group">
-    <input type="text" class="form-control" id="txtTodoName" placeholder="Yeni bir görev ekle...">
-    <div class="input-group-append">
-        <button class="btn btn-primary" ><i class="bi bi-plus-circle"></i></button>
+    <div class="header">
+        <h1>Amac's To-Do</h1>
     </div>
-</div>
-</div>
-</form>
 
-<div class="container">
-    <div class="card border-primary mt-3 m-3" style="max-width: 18rem;">
-        <div class="card-header">BEKLİYOR</div>
-        <div class="card-body text-primary">
-          <h5 class="card-title">Primary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="container-input">
+                <form id="addTodoForm"  >
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="txtTodoName" placeholder="Yeni bir görev ekle...">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary"><i class="bi bi-plus-circle"></i></button>
+                        </div>
+                    </div>
+            </div>
         </div>
-      </div>
-      <div class="card border-primary mt-3 m-3" style="max-width: 18rem;">
-        <div class="card-header">YAPILIYOR</div>
-        <div class="card-body text-primary">
-          <h5 class="card-title">Primary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+
+    <!-- <div class="container-cards row-cols-5">
+            <div class="card border-warning mb-3 mt-4">
+                <div class="card-header">Bekliyor</div>
+                <div class="card-body">
+                </div>
+                <ul id="todo-list" class="list-group">
+                    <li class="list-group-item list-group-item">
+                        todo Item1
+                        <a class="delete-item float-end">
+                            <i class="bi bi-trash-fill"></i>
+                        </a>
+                    </li>
+                    <li class="list-group-item list-group-item-secondary">
+                        todo Item1
+                        <a class="delete-item float-end">
+                            <i class="bi bi-trash-fill"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card border-warning mb-3 mt-4">
+                <div class="card-header">Yapılıyor
+                </div>
+                <div class="card-body">
+                </div>
+                <ul id="todo-list2" class="list-group">
+                    <li class="list-group-item list-group-item">
+                        todo Item1
+                        <a class="delete-item float-end">
+                            <i class="bi bi-trash-fill"></i>
+                        </a>
+                    </li>
+                    <li class="list-group-item list-group-item-secondary">
+                        todo Item1
+                        <a class="delete-item float-end">
+                            <i class="bi bi-trash-fill"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card border-warning mb-3 mt-4">
+                <div class="card-header">Tamamlandı
+                    <a id="btnDeleteAll" class="btn btn-outline-danger btn-sm delete-all float-end">Delete All</a>
+                </div>
+                <div class="card-body">
+                </div>
+                <ul id="todo-list3" class="list-group">
+                    <li class="list-group-item list-group-item">
+                        todo Item1
+                        <a class="delete-item float-end">
+                            <i class="bi bi-trash-fill"></i>
+                        </a>
+                    </li>
+                    <li class="list-group-item list-group-item-secondary">
+                        todo Item1
+                        <a class="delete-item float-end">
+                            <i class="bi bi-trash-fill"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            
+    </div>
+     -->
+
+    <div class="container mt-4">
+        <div class="card-group card border-warning">
+            <div class="card">
+                <div class="card-body"  >
+                    <div class="card-header">Bekliyor</div>
+                    <div class="card-body">
+                    </div>
+                    <ul id="todo-list" ondrop="drop(event)" ondragover="allowDrop(event)" class="list-group list-group" > 
+                        <!-- <li class="list-group-item list-group-item">
+                            <a class="delete-item float-end">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </li>
+                        <li class="list-group-item list-group-item-secondary">
+                            <a class="delete-item float-end">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </li> -->
+                    </ul>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-header">Yapılıyor</div>
+                    <div class="card-body">
+                    </div>
+                    <ul id="doing" ondrop="drop(event)" ondragover="allowDrop(event)" class="list-group">
+                        <!-- <li class="list-group-item list-group-item">
+                            <a class="delete-item float-end">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </li>
+                        <li class="list-group-item list-group-item-secondary">
+                            <a class="delete-item float-end">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </li> -->
+                    </ul>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-header">Tamamlandı
+                        <a id="btnDeleteAll" class="btn btn-outline-danger btn-sm delete-all float-end">Hepsini Sil</a>
+                    </div>
+                    <div class="card-body">
+                    </div>
+                    <ul id="done" ondrop="drop(event)" ondragover="allowDrop(event)" class="list-group-item-secondary">
+                        <!-- <li class="list-group-item list-group-item">
+                            <a class="delete-item float-end">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </li>
+                        <li class="list-group-item list-group-item-secondary">
+                            <a class="delete-item float-end">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </li> -->
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="card border-primary mt-3 m-3" style="max-width: 18rem;">
-        <div class="card-header">TAMAMLANDI</div>
-        <div class="card-body text-primary">
-          <h5 class="card-title">Primary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-</div>
 
-<!-- ödev TO-DO -->
+        <!-- ödev TO-DO -->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="site.js" type="text/javascript"> </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"></script>
+        <script src="site.js" type="text/javascript"> </script>
 </body>
+
 </html>
